# fish-tank

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: DESIGN.md
scripts/: install-scheduled-task.ps1  restore-quarantined-world.py  uninstall.ps1
src/tank/: __main__.py  bestiary.py  circadian.py  cli.py  clock.py  crashsense.py  hardware.py  install.py  models.py  mood.py  mortality.py  observer.py  paths.py  proc.py  public_names.py  publish.py  rng.py  serdes.py  serve.py  spawn.py  tick.py  weather.py  world.py
src/tank/data/: bestiary.yaml  default_config.yaml  epitaphs.yaml
src/tank/render/: frame.py  live.py
tests/: conftest.py  test_bestiary.py  test_circadian.py  test_cli.py  test_clock.py  test_crashsense.py  test_hardware.py  test_install.py  test_live.py  test_models.py  test_mood.py  test_mortality.py  test_night_fish.py  test_observer.py  test_observer_config.py  test_paths.py  test_proc.py  test_public_names.py  test_publish.py  test_render_frame.py  test_serdes_legacy.py  test_serve.py  test_smoke.py  test_spawn.py  test_tick.py  test_weather.py  test_world.py
tests/fixtures/frames/: empty_tank.txt
