[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fish-tank"
dynamic = ["version"]
description = "A terminal aquarium that lives in your machine."
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
tank = "tank.cli:main"

[tool.setuptools.dynamic]
version = { attr = "tank.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tank = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
